--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -27,12 +28,14 @@
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.20",
+    "expo-device": "~7.0.3",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
-    "expo-notifications": "^0.29.14",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -48,7 +51,8 @@
     "react-native": "0.76.9",
     "react-native-calendars": "^1.1311.1",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -58,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/geojson": "^7946.0.16",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
