--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "^0.14.6",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.20",
     "expo-device": "~7.0.3",
@@ -53,6 +54,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "1.18.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
